# myngx

./: .gitignore  CMakeLists.txt  Makefile  README.md
auto/: configure  define  feature  have  have_headers  include  init  make  modules  options  sources  summary  threads  unix
auto/cc/: conf  gcc  name
auto/lib/: conf
auto/lib/pcre/: conf
auto/os/: conf  linux
auto/test/: echo_capablity.sh  regex_dirsep.sh
auto/types/: sizeof
src/auto/: ngx_modules.c
src/core/: nginx.c  nginx.h  ngx_conf_file.h  ngx_config.h  ngx_core.h  ngx_string.c  ngx_string.h
src/event/: ngx_event.h
src/os/unix/: ngx_channel.c  ngx_channel.h  ngx_errno.h  ngx_posix_config.h  ngx_process.c  ngx_process.h  ngx_process_cycle.c  ngx_process_cycle.h  ngx_socket.c  ngx_socket.h  ngx_time.h  ngx_types.h
src/test/: delay_test1.c  fork_parent_var_test.c  fork_parent_var_test2.c  malloc_test.c  pipe_test.c  process_arr_test.c  sigaction_test.c  signo_test.c  sigset_test.c  sigsuspend_test.c  socketpair_test.c
